# sims

./: .env.local.example  .env.modal.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/workbench/: page.tsx
frontend/src/components/: collapsible-sidebar.tsx  side-nav.tsx
frontend/src/components/icons/: aws.tsx  basic.tsx
frontend/src/components/theme/: controls.tsx  toggle.tsx
frontend/src/components/workbench/canvas/: flow.tsx  primitive-node.tsx
frontend/src/components/workbench/logs/: controls.tsx  feed.tsx  panel.tsx
frontend/src/config/: site.ts
frontend/src/contexts/: use-feed-context.tsx  use-primitives-context.tsx
frontend/src/lib/: utils.ts
frontend/src/schemas/workbench/: feed.ts  primitive.ts
frontend/src/styles/: globals.css
helloworldkitty/: api.py  cli.py  config.py  llm.py  logging.py  setup.py
helloworldkitty/attack/: ddos.py  pentest.py  scan.py  techniques.json
helloworldkitty/defense/: siem_alerts.py  siem_rules.py
helloworldkitty/ingestion/: aws_cloudtrail.py
helloworldkitty/logs/: aws_cloudtrail.py
helloworldkitty/normal/: user.py
kitty/attack/: rules.py  scan.py
sims/: agents.py  api.py  config.py  infrastructure.py  llm.py  logger.py  setup.py
sims/api/: modal_server.py  models.py  server.py
sims/attack/: attacker.py  detonation.py  noise.py  stratus.py
sims/log_references/: aws_cloudtrail.html
sims/scenarios/: __init__.py
tests/scenarios/: README.md
tests/scenarios/cloud_breach_s3/: manifest.yml
tests/scenarios/cloud_breach_s3/assets/: proxy.com
tests/scenarios/codebuild_secrets/: README.md  cheat_sheet_solo.md  manifest.yml
tests/scenarios/codebuild_secrets/assets/: buildspec.yml  lambda.py
tests/scenarios/codebuild_secrets/terraform/: codebuild.tf  ec2.tf  iam.tf  outputs.tf  ssm-parameters.tf  variables.tf  vpc.tf
tests/scenarios/ecs_efs_attack/: README.md  cheat_sheet.md  manifest.yml
tests/scenarios/ecs_efs_attack/terraform/: ec2.tf  lambda.tf
tests/scenarios/rce_web_app/: README.md  manifest.yml
tests/scenarios/rce_web_app/assets/: db.txt
tests/scenarios/rce_web_app/terraform/: iam.tf  lb.tf  outputs.tf  vpc.tf
tracecat/: agents.py  api.py  cli.py  config.py  credentials.py  embeddings.py  evaluation.py  infrastructure.py  lab.py  llm.py  logger.py  setup.py  tracking.py
tracecat/attack/: attacker.py  attacker.tf  ddos.py  detonation.py  noise.py  stratus.py  techniques.json
tracecat/autotuner/: __init__.py  optimizer.py  types.py
tracecat/catalog/: lib.py  primitives.parquet
tracecat/cspm/: __init__.py  prowler.py
tracecat/defense/: siem_alerts.py  siem_rules.py
tracecat/ingestion/: aws_cloudtrail.py
tracecat/log_references/: aws_cloudtrail.html
tracecat/log_samples/aws_cloudtrail/: cloudtrail_update_trail_error.json  ec2_create_key_pair.json  ec2_stop_instances.json  iam_add_user_to_group.json  iam_create_role.json  iam_create_user.json  kms_rotate_keys.json
tracecat/log_samples/okta/: app_assigned.json  failed_login.json  login_successful.json  logout_successful.json  user_locked_out.json
tracecat/log_samples/tailscale/: https_disabled.json  machine_approval_requirements_disabled.json  magic_dns_disabled.json  normal_event.json
tracecat/normal/: user.py
tracecat/scenarios/: __init__.py  agents.py  codebuild_secrets.py  detection_evasion.py  detection_evasion.tf  ec2_ssrf.py  ec2_ssrf.tf  ecs_efs_attack.py  iam_privesec_by_attachment.py  iam_privesec_by_attachment.tf
tracecat/schemas/: datadog.py  datadog_log_search_syntax.md
